[gd_scene load_steps=4 format=2]

[ext_resource path="res://cards/assets/Kaart_Base.png" type="Texture" id=1]
[ext_resource path="res://cards/scripts/card-face.gd" type="Script" id=2]
[ext_resource path="res://font/card_font_theme.tres" type="Theme" id=3]

[node name="CardFace" type="Node2D"]
scale = Vector2( 0.889, 1 )
script = ExtResource( 2 )

[node name="Image" type="Sprite" parent="."]
scale = Vector2( 0.238281, 0.238281 )
texture = ExtResource( 1 )

[node name="AttackNightLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -53.0
margin_top = 128.0
margin_right = -25.0
margin_bottom = 164.0
rect_rotation = 180.0
theme = ExtResource( 3 )
text = "%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefenceNightLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -13.0
margin_top = 127.0
margin_right = 15.0
margin_bottom = 163.0
rect_rotation = 180.0
theme = ExtResource( 3 )
text = "%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackDayLabel" type="Label" parent="."]
margin_left = 54.0
margin_top = -127.0
margin_right = 82.0
margin_bottom = -91.0
theme = ExtResource( 3 )
text = "%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefenceDayLabel" type="Label" parent="."]
margin_left = 13.0
margin_top = -127.0
margin_right = 41.0
margin_bottom = -91.0
theme = ExtResource( 3 )
text = "%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
